Fixed image paths

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<!-- About-Section starts -->
 			<section class="about" id="about">
 				<div class="about-content">
-					<div class="img"><img src="images/tony-2.JPG" alt="tony-2" width="200px" height="200px"></div>
+					<div class="img"><img src="images/tony-2.jpg" alt="tony-2" width="200px" height="200px"></div>
 					<div class="about-list">
 						<ul>
 							<li><span>Name:</span>Fadaka Anthony</li>
