Fixed image paths

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<br>
 							<li><span>Email:</span>anthonyfadaka@gmail.com</li>
 							<br>
-							<li><span>Phone:</span>09039365330</li>
+							<li><span>Phone:</span>+2349039365330</li>
 						</ul>
 					</div>
 					<div class="about-text">
