Fixed image oaths

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								I'd love to hear from you! Whether you have a question, a project idea or just want to say Hello feel free to reach out. I am always ready to assist you 
 							</p>
 							<p><i class="fa-solid fa-location-dot"></i>Ijoka Road Akure, Ondo State</p>
-							<p><i class="fa-solid fa-phone"></i>:09039365330</p>
+							<p><i class="fa-solid fa-phone"></i>:+2349039365330</p>
 							<p><i class="fa-solid fa-envelope"></i>anthonyfadaka@gmail.com</p>
 							<div class="social-icons">
 								<a href="#"><i class="fa-brands fa-facebook"></i></a>
